--- a/bilde4.html
+++ b/bilde4.html
@@ -12,9 +12,9 @@
     <ul class="lists">
         <li id="person">Moustapha</li>
         <li id="date">26.06.2021</li>
-        <li id="place">Mandal, Norway</li>
+        <li id="place">Norway</li>
     </ul>
-    <h3 class="head">Natur</h3>
+    <h3 class="head">Sunset</h3>
         <p class="paragraph1">What is more beautiful than the sunset view on a perfect summer day. I found myself lucky to attend this sunset personally. I didn't see ever such a nice view of the sunset. You feel your dreams coming true at moments like this.
         </p>
     
