--- a/reflection.html
+++ b/reflection.html
@@ -20,26 +20,36 @@
     </head>
 
     <body>
-        <div>
+        <div id="d2_mj">
             <h2>Reflection text</h2>
-            <p id="p_mj">
-                At the beginning we put the shape of our page on mobile size. It wasn't easy to decide which size exactly should be the changing point from PC size to mobile version, cause normal iphone 667 px width, iphone plus starts at 736px, ipad starts at 1024 px width.
-                At the end we decided that 1000 px width with fit perfect to any mobile type could open our page.
-                So at 1050px width our page converted to mobile mode.<br>
-                We thought that if we started creating our page for mobile version(in 1050px width and less) then afterword styling the pc version (over 1050px) will be easier and safer,
-                cause most our problems will be mostly in mobile version, then after we can after continue to reach pc version.
-                So if you check our css styling file you will see the default styling for mobile version then later with @ media styling assigned for pc.<br>
-                Then after we found that it would be nice to make some art to the way we demonstrate our pictures and its description.
-                The idea was that all images coming in front at the beginning then when hovering on it become bigger a little then when clicked over it the image flips and the text appears instead.
-                This was easy to do on pc version but we faced problems to do this technic on mobile version, so after many fails to make it working the decision was to cancel this idea of flipping to the text,
-                and what we did that our images coming first then when hover on them become bigger a little then by clicking on it you got full information about it as a new page.
-                And this worked perfectly for the mobile version also.<br>
-                Another problem we faced on the pc version was that all images were aligned to the left side not at the centre.
-                To fix this we created a div block with a class &#8243all&#8243 element to gather all the images, so all our images now as one block then we aligned them to center, then this worked perfectly.<br>
-
-                We also discussed using image and picture element. This was at the beginning and we found it's so good to use the picture element in case we needed a smaller version of our pictures with smaller sizes, and how it's easy to use the picture element as one code to put all our images versions with different sizes in one code. But in the end we didn't need to use it and our images looked fine, so we didn't use it.
-
-            </p>
+            <div id="d2_mj">
+                <p class="p_mj">
+                    At the beginning we put the shape of our page on mobile size. It wasn't easy to decide which size exactly should be the changing point from PC size to mobile version, cause normal iphone 667 px width, iphone plus starts at 736px, ipad starts at 1024 px width.
+                </p>
+                <p class="p_mj">
+                    At the end we decided that 1000 px width with fit perfect to any mobile type could open our page.
+                    So at 1050px width our page converted to mobile mode.
+                </p>
+                <p class="p_mj">
+                    We thought that if we started creating our page for mobile version(in 1050px width and less) then afterword styling the pc version (over 1050px) will be easier and safer,
+                    cause most our problems will be mostly in mobile version, then after we can after continue to reach pc version.
+                    So if you check our css styling file you will see the default styling for mobile version then later with @ media styling assigned for pc.
+                </p>
+                <p class="p_mj">
+                    Then after we found that it would be nice to make some art to the way we demonstrate our pictures and its description.
+                    The idea was that all images coming in front at the beginning then when hovering on it become bigger a little then when clicked over it the image flips and the text appears instead.
+                    This was easy to do on pc version but we faced problems to do this technic on mobile version, so after many fails to make it working the decision was to cancel this idea of flipping to the text,
+                    and what we did that our images coming first then when hover on them become bigger a little then by clicking on it you got full information about it as a new page.
+                    And this worked perfectly for the mobile version also.
+                </p>
+                <p class="p_mj">
+                    Another problem we faced on the pc version was that all images were aligned to the left side not at the centre.
+                    To fix this we created a div block with a class &#8243all&#8243 element to gather all the images, so all our images now as one block then we aligned them to center, then this worked perfectly.
+                </p>
+                <p class="p_mj">
+                    We also discussed using image and picture element. This was at the beginning and we found it's so good to use the picture element in case we needed a smaller version of our pictures with smaller sizes, and how it's easy to use the picture element as one code to put all our images versions with different sizes in one code. But in the end we didn't need to use it and our images looked fine, so we didn't use it.
+                </p>
+          </div>
         </div>
         
     </body>
