--- a/reflection.html
+++ b/reflection.html
@@ -22,7 +22,7 @@
     <body>
         <div id="d2_mj">
             <h2>Reflection text</h2>
-            <div id="d2_mj">
+            <div id="d_mj">
                 <p class="p_mj">
                     At the beginning we put the shape of our page on mobile size. It wasn't easy to decide which size exactly should be the changing point from PC size to mobile version, cause normal iphone 667 px width, iphone plus starts at 736px, ipad starts at 1024 px width.
                 </p>
